[metadata]
name = hsslms
version = 0.1.0
author = Matthias Vögeler
author_email = matthias.voegeler@hshl.de
description = Leighton-Micali Hash-Based Signatures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pmvr/python-hsslms
project_urls =
    Documentation = https://python-hsslms.readthedocs.io/en/latest/
    Source = https://github.com/pypa/sampleproject/
    Bug Tracker = https://github.com/pmvr/python-hsslms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
scripts =
    bin/hsslms
packages = find:
install_requires =
    cryptography
python_requires = >=3.6

[options.packages.find]
where = src
