[metadata]
name = hsslms
version = 0.1.3
author = Matthias Vögeler
author_email = matthias.voegeler@hshl.de
description = Leighton-Micali Hash-Based Signatures
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/pmvr/python-hsslms
project_urls =
    Documentation = https://pmvr.github.io/python-hsslms/
    Source = https://github.com/pypa/sampleproject/
    Bug Tracker = https://github.com/pmvr/python-hsslms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
scripts =
    bin/hsslms
packages = find:
install_requires =
    cryptography
python_requires = >=3.6

[options.packages.find]
where = src
